updated the html and js files with pretty much everything but it doesnt work anymore

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Psychic Game</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <script src="assets/javascript/game.js"></script>
+
 </head>
+
 <body>
-    
+    <div>
+      <h1>The Psychic Game</h1>
+        <p id="directions">Guess what letter I'm thinking of!</p>
+        <p id="win-text">Wins: 0</p>
+        <p id="loss-text">Losses: 0</p>
+        <p id="guesses-text">Guesses remaining: 9</p>
+        <p id="guessed-text">Guessed so far: </p>
+    </div>
+
+
+<script src="assets/javascript/game.js"></script>
 </body>
 </html>
